--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "wrangler pages dev dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
+    "deploy": "NODE_ENV=production $npm_execpath run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "@hono/react-renderer": "^0.2.0",
@@ -16,8 +16,12 @@
     "@cloudflare/workers-types": "^4.20240502.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.12.0",
+    "@types/node": "^20.12.8",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.11",
     "wrangler": "^3.53.1"
   }
