--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "moduleResolution": "Bundler",
     "strict": true,
     "lib": ["ESNext"],
-    "types": ["@cloudflare/workers-types", "vite/client"],
+    "types": ["@cloudflare/workers-types", "vite/client", "node"],
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  }
+  },
+  "include": ["./src/**/*"]
 }
