--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "type": "module",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "wrangler pages dev dist",
-    "deploy": "NODE_ENV=production $npm_execpath run build && wrangler pages deploy dist"
+    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "@hono/react-renderer": "^0.2.0",
