--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
-    "lib": ["ESNext"],
-    "types": ["@cloudflare/workers-types", "vite/client", "node"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "types": ["@cloudflare/workers-types", "vite/client"],
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  },
-  "include": ["./src/**/*"]
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
