--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@hono/react-renderer": "^0.2.0",
     "hono": "^4.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240502.0",
