--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "portfolio",
+  "description": "My personal portfolio website.",
+  "author": "Tycho Verstraete <tycho@tychoverstraete.be>",
+  "version": "0.0.1",
   "type": "module",
   "engines": {
     "node": "18"
@@ -6,26 +10,36 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode client && vite build",
-    "preview": "wrangler pages dev dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
+    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
+    "lint": "eslint"
   },
   "dependencies": {
     "@hono/react-renderer": "^0.2.0",
     "hono": "^4.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240502.0",
+    "@cloudflare/workers-types": "^4.20240512.0",
+    "@eslint/js": "^9.3.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.12.0",
     "@types/node": "^20.12.8",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "globals": "^15.3.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
+    "typescript-eslint": "^7.10.0",
     "vite": "^5.2.11",
-    "wrangler": "^3.53.1"
+    "wrangler": "^3.57.0"
   }
 }
