--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
   "name": "portfolio",
-  "description": "My personal portfolio website.",
-  "author": "Tycho Verstraete <tycho@tychoverstraete.be>",
-  "version": "0.0.1",
+  "private": true,
   "type": "module",
-  "engines": {
-    "node": "18"
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --mode client && vite build",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
-    "lint": "eslint"
+    "dev": "vite dev --port 3000",
+    "build": "vite build",
+    "serve": "vite preview",
+    "deploy": "npm run build && wrangler deploy",
+    "preview": "npm run build && vite preview",
+    "cf-typegen": "wrangler types",
+    "test": "vitest run",
+    "format": "biome format",
+    "lint": "biome lint",
+    "check": "biome check"
   },
   "dependencies": {
-    "@hono/react-renderer": "^0.2.0",
-    "hono": "^4.4.0",
-    "node-fetch": "^3.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@cloudflare/vite-plugin": "^1.14.0",
+    "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-router": "^1.132.0",
+    "@tanstack/react-router-devtools": "^1.132.0",
+    "@tanstack/react-router-ssr-query": "^1.131.7",
+    "@tanstack/react-start": "^1.132.0",
+    "@tanstack/router-plugin": "^1.132.0",
+    "lucide-react": "^0.544.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-social-icons": "^6.25.0",
+    "tailwindcss": "^4.0.6",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240524.0",
-    "@eslint-react/eslint-plugin": "^1.5.12",
-    "@eslint/js": "^9.3.0",
-    "@hono/vite-cloudflare-pages": "^0.2.4",
-    "@hono/vite-dev-server": "^0.12.0",
-    "@types/node": "^20.12.8",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.3.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "globals": "^15.3.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^5.2.11",
-    "wrangler": "^3.57.0"
+    "@biomejs/biome": "2.2.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
+    "jsdom": "^27.0.0",
+    "typescript": "^5.7.2",
+    "vite": "^7.1.7",
+    "vitest": "^3.0.5",
+    "web-vitals": "^5.1.0",
+    "wrangler": "^4.46.0"
   }
 }
